updates readme, index.html

--- a/styles/scss/main.scss
+++ b/styles/scss/main.scss
@@ -1,6 +1,6 @@
-$color-primary: green;
+$color-primary: blue;
 
 body {
 	background-color: $color-primary;
-	border: 10px solid green;
+	border: 10px solid red;
 }
