adds sample of a build task

--- a/stylesheets/scss/main.scss
+++ b/stylesheets/scss/main.scss
@@ -3,4 +3,5 @@ $color-primary: green;
 body {
 	background-color: $color-primary;
 	border: 10px solid red;
+	background-image: ('../img/foo.jpg');
 }
