--- a/stylesheets/scss/_variables.scss
+++ b/stylesheets/scss/_variables.scss
@@ -1,8 +1,9 @@
 // COLOR PALETTE
-$primary: #13A89E;
-$secondary: #F1592A;
+$teal: #13A89E;
+$orange: #FF9900;
+$white: #ffffff;
 $neutral: black;
-$highlight: $primary;
+$highlight: $teal;
 
 // FONT
 $helvetica: 'Helvetica Neue', Helvetica, Arial, sans-serif;
