Updated FAQ, Links, Score content block into tabs and icons

--- a/stylesheets/scss/_400.scss
+++ b/stylesheets/scss/_400.scss
@@ -1,19 +1,25 @@
 header {
-
 	img {
 		display: inline-block;
 		margin: 0;
 	}
-
 	p {
 		display: inline-block;
 		float: right;
 	}
-
 }
 
 #blocks {
 	padding: $padding;
+}
+
+#c .tabs-nav li {
+	display: inline-block;
+	width: 30%;
+	button.icon {
+		max-width: 100%;
+		padding: 10%;
+	}
 }
 
 .details ul li.fixed.a {
