Cleaned up FAQ, Links & Score section

--- a/stylesheets/scss/_buttons.scss
+++ b/stylesheets/scss/_buttons.scss
@@ -1,8 +1,8 @@
 button { 
 	color: $white;
 	font-family: $lato;
-	font-size: 1em;
-	font-weight: 400;
+	font-size: 1.3em;
+	font-weight: 700;
 	text-transform: uppercase;
 	width: 100%;
 	padding: 0.7em 1.4em;
@@ -19,12 +19,12 @@ button {
 	@extend button;
 	color: $orange;
 	font-family: $lato;
-	font-size: 2.7em;
+	font-size: 3em;
 	font-weight: 700;
 	text-transform: uppercase;
 	width: 100%;
 	padding: 0.2em 0.2em;
-	margin: 0.2em 0;
+	margin: 0.5em 0;
 	background-color: $white;
 	border: 2px solid $orange;
 
@@ -51,3 +51,9 @@ button {
 	}
 }
 
+.button-tabs {
+	display: inline-block;
+    width: auto;
+    padding: 0.7em 1em;
+    float: right;
+}
