--- a/stylesheets/scss/_mobilefirst.scss
+++ b/stylesheets/scss/_mobilefirst.scss
@@ -26,19 +26,20 @@ h1 {
 
 h2 {
 	@extend h1;
-	font-size: 1.25em;
+	font-size: 1.3em;
 	color: $white;
 	padding: 0;
 	margin: 0;
 }
 
 h3 {
+	font-size: 1.3em;
 	color: $white;
-	font-size: 1em;
+	padding: 0;
+	margin: 0;
 	font-weight: 400;
 	text-align: center;
 	padding: 0.7em 1.4em;
-	margin: 0;
 	background-color: $teal;
 	border: 0 solid black;
 
@@ -130,7 +131,7 @@ header {
 	padding: 7% 5%;
 }
 
-#more-info ul {
+#info ul {
 	display: none;
 	list-style-type: none;
 	margin: 0;
@@ -207,24 +208,65 @@ header {
   padding: 1em;
   text-align: center;
   margin-bottom: 0;
-  h3 {
-		padding: 0.3em;
-		margin: 0;
-		&:hover, &:focus, &:active {
-			background-color: lighten($teal, 10%);
-			font-weight: 400;
+  h2 {
+  	clear: both;
+  	font-size: 3em;
+    padding: .5em;
+    border-bottom: 2px solid #fff;
+    margin-bottom: 0.75em;
+  }
+
+	#tabs-nav-icons li {
+		display: inline-block;
+		width: 30%;
+		button.icon {
+			max-width: 100%;
+			padding: 10%;
 		}
 	}
-	p {
-		font-weight: 400;
-		padding: 0 10%;
-		a {
-			font-weight: 400;
+
+	#faq {
+		li:last-child {
+			margin-bottom: 1em;
 		}
+		h3 {
+			@extend a;
+			padding: 0.3em;
+			margin: 0;
+			
+			&:hover, &:focus, &:active {
+				background-color: lighten($teal, 10%);
+				color: $white;
+				font-weight: 400;
+			}
+		}
+		p {
+			display: none;
+			padding: 0 10%;
+			a {
+				font-size: 1.1em;
+				display: block;
+			}
+		}
+
+	}
+
+	#links li {
+		font-size: 1.2em;
+    margin-bottom: 0.5em;
+	}
+
+	#score p {
+		font-size: 1.2em;
 	}
 }
 
-
+.tabs-nav-shrink {
+	transition: all 1s ease;
+	width: 200px;
+  padding: 0 1em;
+  float: left;
+}
 
 
 // FOOTER //
