--- a/stylesheets/scss/_modals.scss
+++ b/stylesheets/scss/_modals.scss
@@ -14,7 +14,7 @@
         width: 30px;
         float: right;
         display: block;
-        margin: 0;
+        margin: 0.5em;
     }
 
 }
@@ -47,9 +47,8 @@
 
     h1 {
         background: $teal;
-        padding: 20px 0;
-        font-size: 140%;
-        text-align: center;
+        padding: 20px 0 20px 20px;
+        font-size: 1.5em;
         color: $white;
         margin: -16px -16px 16px -16px;
     }
