--- a/stylesheets/scss/_modals.scss
+++ b/stylesheets/scss/_modals.scss
@@ -8,7 +8,7 @@
     top: 50%;   
     transform: translateY(-50%); // move up the Y axis -50%
 
-    .button-modal {
+    .button-close-modal {
         padding: 0;
         height: 30px;
         width: 30px;
