--- a/stylesheets/scss/_buttons.scss
+++ b/stylesheets/scss/_buttons.scss
@@ -43,17 +43,24 @@ button {
 
 #blocks button {
 	margin: 0.2em 0;
+	
 	&.icon {
-		max-width: 60%;
+		max-width: 100%;
+		padding: 10%;
 	}
+
+	&.button-close {
+		background: none;
+		font-size: 2.2em;
+		display: inline-block;
+	    width: auto;
+	    padding: 0.3em 0.4em;  
+	    float: right;
+	}
+
 	&:focus {
 		background-color: $orange;
 	}
 }
 
-.button-tabs {
-	display: inline-block;
-    width: auto;
-    padding: 0.7em 1em;
-    float: right;
-}
+
