Finished contact form backend and styles

--- a/stylesheets/scss/_modals.scss
+++ b/stylesheets/scss/_modals.scss
@@ -105,3 +105,13 @@
         }
     }
 }
+
+#message {
+    height: 250px;
+    font-family: Lato;
+    font-size: 1.4em;
+    text-align: center;
+    padding: 90px 0;
+    text-transform: none;
+    color: #555;
+}
