--- a/stylesheets/scss/_buttons.scss
+++ b/stylesheets/scss/_buttons.scss
@@ -44,9 +44,30 @@ button {
 #blocks button {
 	margin: 0.2em 0;
 	
-	&.icon {
+	&.button-icon {
 		max-width: 100%;
 		padding: 10%;
+		position: relative;
+		
+		&:hover {
+			.icon {
+				transition: all 0.3s ease;
+				opacity: 0;
+			}
+			.icon-hover {
+				opacity: 1;
+			}
+		}
+
+		.icon-hover {
+			position: absolute;
+			padding: 13%;
+			top: 0;
+			right: 0;
+			bottom: 0;
+			left: 0;	
+			opacity: 0;
+		}
 	}
 
 	&.button-close {
@@ -60,6 +81,10 @@ button {
 
 	&:focus {
 		background-color: $orange;
+	}
+
+	&:hover {
+		background-color: none;
 	}
 }
 
